en este commit realizamos el consumo de la api para una lista de usuarios , y sus 5 datos correspondientes , agregamos el disenio de una tabla y del el navbar , tiene resopnsive y se agrega estilos propios , se realiza prueba sencilla en la cual esperamos aparezca la informacion solicitada

--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,14 @@
     transform: rotate(360deg);
   }
 }
+
+.principal_container{
+  width: 70%;
+  margin: 20px auto;
+}
+
+.principal_title{
+  text-align: center;
+  color: grey;
+  padding: 20px;
+}
